fix(www): Fix `.bear` alignment on mobile displays.

--- a/packages/css/styles/bear.scss
+++ b/packages/css/styles/bear.scss
@@ -1,4 +1,5 @@
 .bear {
+    width: 100%;
     text-align: center;
     font-size: 6rem;
     white-space: nowrap;
